[project]
name = "maplestoryautolevelup"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.15.0",
    "pynput>=1.8.1",
    "pyobjc-framework-quartz>=11.1 ; sys_platform == 'darwin'",
    "pyside6>=6.9.1",
    "pywin32>=311 ; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.14",
    "windows-capture>=1.5.0 ; sys_platform == 'win32'",
]
